--- a/options/train/far/long_video_prediction/FAR_B_GRPO_Long_dmlab_res64_1000K_bs32.yml
+++ b/options/train/far/long_video_prediction/FAR_B_GRPO_Long_dmlab_res64_1000K_bs32.yml
@@ -1,4 +1,4 @@
-name: FAR_B_Long_dmlab_res64_1000K_bs32
+name: FAR_B_GRPO_Long_dmlab_res64_1000K_bs32
 manual_seed: 0
 mixed_precision: bf16
 
@@ -6,17 +6,18 @@ mixed_precision: bf16
 datasets:
   train:
     type: DMLabDataset
-    data_list: /users/xiaokangliu/datasets/dmlab/dmlab_train.json
+    data_list: datasets/dmlab_latent/dmlab_train.json
     split: training
     use_latent: true
     data_cfg:
       num_frames: 300
       frame_interval: 1
     batch_size_per_gpu: 4
+    num_rollouts_per_prompt: 8
 
   sample:
     type: DMLabDataset
-    data_list: /users/xiaokangliu/datasets/dmlab/dmlab_val.json
+    data_list: datasets/dmlab/dmlab_val.json
     split: validation
     data_cfg:
       num_frames: 300
@@ -27,20 +28,19 @@ datasets:
 models:
   model_cfg:
     transformer:
-      from_pretrained: ~ # diffusers pretrained path (from_pretrained)
+      from_pretrained: ~/models/FAR_B_Long_DMLab_Action64-c09441dc.pth # diffusers pretrained path (from_pretrained)
       init_cfg:
         type: FAR_B_Long
         config: {
           "condition_cfg": {
-            'type': 'action',
-            'num_action_classes': 4
+            "type": "action",
+            "num_action_classes": 4
           }
         }
-        pretrained_path: /users/xiaokangliu/models/FAR_B_Long_DMLab_Action64-c09441dc.pth
     vae:
       type: MyAutoencoderDC
       from_config: options/model_cfg/dcae/model_8x_c32_config.json
-      from_config_pretrained: /users/xiaokangliu/models/DCAE_DMLab_Res64-17035ae5.pth
+      from_config_pretrained: ~/models/DCAE_DMLab_Res64-17035ae5.pth
     scheduler:
       from_pretrained: options/model_cfg/far/scheduler_config.json
   clean_context_ratio: 0.1
@@ -49,7 +49,7 @@ models:
 
 # path
 path:
-  pretrain_network: ~
+  pretrain_network: ~/models/FAR_B_Long_DMLab_Action64-c09441dc.pth
 
 # training settings
 train:
@@ -68,6 +68,8 @@ train:
   warmup_iter: 10000
   total_iter: 1000000
   max_grad_norm: 1.0
+
+  num_batches_per_epoch: 4
 
 # validation settings
 val:
