--- a/options/test/far/long_video_prediction/FAR_B_Long_dmlab_res64_1000K_bs32.yml
+++ b/options/test/far/long_video_prediction/FAR_B_Long_dmlab_res64_1000K_bs32.yml
@@ -80,7 +80,7 @@ val:
     num_inference_steps: 50
     sample_size: 8
     sample_trajectory_per_video: 1
-    use_kv_cache: false
+    use_kv_cache: true
   eval_cfg:
     metrics: ['mse', 'psnr', 'ssim', 'fvd', 'lpips']
 
