--- a/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32_debug.yml
+++ b/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32_debug.yml
@@ -1,4 +1,4 @@
-name: v2_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
+name: FAR_M_Long_minecraft_res128_1000K_bs32_GRPO_debug
 manual_seed: 0
 mixed_precision: bf16
 
@@ -12,7 +12,8 @@ datasets:
     data_cfg:
       num_frames: 300
       frame_interval: 1
-    batch_size_per_gpu: 4
+    batch_size_per_gpu: 8
+    num_rollouts_per_prompt: 8 # currently for debug
 
   sample:
     type: MinecraftDataset
@@ -49,7 +50,7 @@ models:
 
 # path
 path:
-  pretrain_network: /users/xiaokangliu/projects/FAR-GRPO/experiments/v3_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO #/users/xiaokangliu/projects/FAR-GRPO/experiments/FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/
+  pretrain_network: /users/xiaokangliu/projects/FAR-GRPO/experiments/v10_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/models
 
 # training settings
 train:
@@ -65,9 +66,12 @@ train:
   ema_decay: 0.9999
 
   lr_scheduler: constant_with_warmup
-  warmup_iter: 10000
+  warmup_iter: 5000
   total_iter: 1000000
   max_grad_norm: 1.0
+  adv_clip_max: 5
+  clip_range: 1e-4
+  num_batches_per_epoch: 1
 
 # validation settings
 val:
@@ -75,11 +79,12 @@ val:
   val_freq: 50000
   sample_cfg:
     context_length: 144
-    # unroll_length: 156
-    unroll_length: 56
+    # unroll_length: 56
+    unroll_length: 11
     guidance_scale: 1.5
     num_inference_steps: 50
     sample_size: 8
+    sample_steps_prob: 0.2
     sample_trajectory_per_video: 1
     use_kv_cache: true
   eval_cfg:
@@ -88,5 +93,5 @@ val:
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 50000
+  save_checkpoint_freq: !!float 10000
   use_wandb: false
