--- a/experiments/lora+kl-fullMSE-12fr-30steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
+++ b/experiments/lora+kl-fullMSE-12fr-30steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
@@ -1,8 +1,8 @@
-# GENERATE TIME: Tue Jun  3 21:49:47 2025
+# GENERATE TIME: Tue Jun  3 22:29:48 2025
 # CMD:
-# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32_debug.yml
+# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
 
-name: FAR_M_Long_minecraft_res128_1000K_bs32_GRPO_debug
+name: lora+kl-fullMSE-12fr-30steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
 manual_seed: 0
 mixed_precision: bf16
 
@@ -16,7 +16,7 @@ datasets:
     data_cfg:
       num_frames: 300
       frame_interval: 1
-    batch_size_per_gpu: 8
+    batch_size_per_gpu: 16
     num_rollouts_per_prompt: 8 # currently for debug
 
   sample:
@@ -43,8 +43,8 @@ models:
         }
         pretrained_path: /users/xiaokangliu/models/FAR_M_Long_Minecraft_Action128-4c041561.pth
       lora_config:
-        r: 8  # LoRA rank
-        alpha: 16  # LoRA scaling factor
+        r: 16  # LoRA rank
+        alpha: 32  # LoRA scaling factor
         dropout: 0.1
         target_modules: ["to_q", "to_k", "to_v", "to_out.0"]  # Target attention modules for LoRA
         bias: "none"
@@ -61,7 +61,7 @@ models:
 
 # path
 path:
-  pretrain_network: ~ #/users/xiaokangliu/projects/FAR-GRPO/experiments/v10_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/models
+  pretrain_network: ~
 
 # training settings
 train:
@@ -81,23 +81,25 @@ train:
   total_iter: 1000000
   max_grad_norm: 1.0
   adv_clip_max: 5
-  clip_range: 1e-4
-  kl_weight: 0.01
-  num_batches_per_epoch: 1
+  # clip_range: 1e-4
+  clip_range: 1e-3
+  kl_weight: 0.9
+  num_batches_per_epoch: 2
 
 # validation settings
 val:
   val_pipeline: FARPipeline
-  val_freq: 50000
+  val_freq: 5000
   eval_on_start: false
   sample_cfg:
     context_length: 144
     # unroll_length: 56
-    unroll_length: 11
+    unroll_length: 12
     guidance_scale: 1.5
-    num_inference_steps: 50
+    # num_inference_steps: 50
+    num_inference_steps: 30
     sample_size: 8
-    sample_steps_prob: 0.5
+    sample_steps_prob: 1
     sample_trajectory_per_video: 1
     use_kv_cache: true
   eval_cfg:
@@ -105,6 +107,6 @@ val:
 
 # logging settings
 logger:
-  print_freq: 100
-  save_checkpoint_freq: !!float 10000
-  use_wandb: false
+  print_freq: 10
+  save_checkpoint_freq: !!float 5000
+  use_wandb: true
