--- a/experiments/v11_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
+++ b/experiments/v11_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
@@ -1,8 +1,8 @@
-# GENERATE TIME: Tue Jun  3 21:49:47 2025
+# GENERATE TIME: Tue Jun  3 11:25:47 2025
 # CMD:
-# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32_debug.yml
+# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
 
-name: FAR_M_Long_minecraft_res128_1000K_bs32_GRPO_debug
+name: v11_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
 manual_seed: 0
 mixed_precision: bf16
 
@@ -42,13 +42,13 @@ models:
           }
         }
         pretrained_path: /users/xiaokangliu/models/FAR_M_Long_Minecraft_Action128-4c041561.pth
-      lora_config:
+    lora_config:
         r: 8  # LoRA rank
-        alpha: 16  # LoRA scaling factor
+        alpha: 8  # LoRA scaling factor
         dropout: 0.1
         target_modules: ["to_q", "to_k", "to_v", "to_out.0"]  # Target attention modules for LoRA
         bias: "none"
-        task_type: "FEATURE_EXTRACTION"
+        task_type: "CAUSAL_LM"
     vae:
       type: MyAutoencoderDC
       from_config: options/model_cfg/dcae/model_16x_c32_config.json
@@ -61,7 +61,7 @@ models:
 
 # path
 path:
-  pretrain_network: ~ #/users/xiaokangliu/projects/FAR-GRPO/experiments/v10_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/models
+  pretrain_network: ~
 
 # training settings
 train:
@@ -69,7 +69,7 @@ train:
 
   optim_g:
     type: AdamW
-    lr: !!float 1e-4
+    lr: !!float 1e-5
     weight_decay: 0
     betas: [ 0.9, 0.999 ]
 
@@ -81,23 +81,24 @@ train:
   total_iter: 1000000
   max_grad_norm: 1.0
   adv_clip_max: 5
-  clip_range: 1e-4
-  kl_weight: 0.01
-  num_batches_per_epoch: 1
+  # clip_range: 1e-4
+  clip_range: 1e-3
+  num_batches_per_epoch: 2
 
 # validation settings
 val:
   val_pipeline: FARPipeline
-  val_freq: 50000
+  val_freq: 5000
   eval_on_start: false
   sample_cfg:
     context_length: 144
     # unroll_length: 56
-    unroll_length: 11
+    unroll_length: 12
     guidance_scale: 1.5
-    num_inference_steps: 50
+    # num_inference_steps: 50
+    num_inference_steps: 30
     sample_size: 8
-    sample_steps_prob: 0.5
+    sample_steps_prob: 1
     sample_trajectory_per_video: 1
     use_kv_cache: true
   eval_cfg:
@@ -105,6 +106,6 @@ val:
 
 # logging settings
 logger:
-  print_freq: 100
-  save_checkpoint_freq: !!float 10000
-  use_wandb: false
+  print_freq: 50
+  save_checkpoint_freq: !!float 5000
+  use_wandb: true
