--- a/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
+++ b/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
@@ -1,4 +1,4 @@
-name: v10_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
+name: lora+kl-v2-fullMSE-12fr-20steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
 manual_seed: 0
 mixed_precision: bf16
 
@@ -12,7 +12,7 @@ datasets:
     data_cfg:
       num_frames: 300
       frame_interval: 1
-    batch_size_per_gpu: 8
+    batch_size_per_gpu: 16
     num_rollouts_per_prompt: 8 # currently for debug
 
   sample:
@@ -38,6 +38,13 @@ models:
           }
         }
         pretrained_path: /users/xiaokangliu/models/FAR_M_Long_Minecraft_Action128-4c041561.pth
+      lora_config:
+        r: 16  # LoRA rank
+        alpha: 32  # LoRA scaling factor
+        dropout: 0.1
+        target_modules: ["to_q", "to_k", "to_v", "to_out.0"]  # Target attention modules for LoRA
+        bias: "none"
+        task_type: "FEATURE_EXTRACTION"
     vae:
       type: MyAutoencoderDC
       from_config: options/model_cfg/dcae/model_16x_c32_config.json
@@ -58,7 +65,7 @@ train:
 
   optim_g:
     type: AdamW
-    lr: !!float 1e-5
+    lr: !!float 5e-4
     weight_decay: 0
     betas: [ 0.9, 0.999 ]
 
@@ -70,20 +77,23 @@ train:
   total_iter: 1000000
   max_grad_norm: 1.0
   adv_clip_max: 5
-  clip_range: 1e-4
+  # clip_range: 1e-4
+  clip_range: 1e-3
+  kl_weight: 0.9
   num_batches_per_epoch: 2
 
 # validation settings
 val:
   val_pipeline: FARPipeline
-  val_freq: 5000
+  val_freq: 3000
   eval_on_start: false
   sample_cfg:
     context_length: 144
     # unroll_length: 56
     unroll_length: 12
     guidance_scale: 1.5
-    num_inference_steps: 50
+    # num_inference_steps: 50
+    num_inference_steps: 20
     sample_size: 8
     sample_steps_prob: 1
     sample_trajectory_per_video: 1
@@ -93,6 +103,6 @@ val:
 
 # logging settings
 logger:
-  print_freq: 90
+  print_freq: 10
   save_checkpoint_freq: !!float 5000
   use_wandb: true
