--- a/experiments/lora+kl-v8-fullmse-56fr-20steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
+++ b/experiments/lora+kl-v8-fullmse-56fr-20steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
@@ -1,4 +1,8 @@
-name: lora+kl-v10-ssim-56fr-10steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
+# GENERATE TIME: Thu Jun  5 21:49:30 2025
+# CMD:
+# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/long_video_prediction/FAR_M_GRPO_Long_minecraft_res128_1000K_bs32.yml
+
+name: lora+kl-v8-fullmse-56fr-20steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
 manual_seed: 0
 mixed_precision: bf16
 
@@ -77,8 +81,8 @@ train:
   total_iter: 1000000
   max_grad_norm: 1.0
   adv_clip_max: 5
-  clip_range: 1e-3
-  # clip_range: 1e-2
+  # clip_range: 1e-4
+  clip_range: 2e-3
   kl_weight: 0.001
   num_batches_per_epoch: 2
 
@@ -93,9 +97,9 @@ val:
     # unroll_length: 12
     guidance_scale: 1.5
     # num_inference_steps: 50
-    num_inference_steps: 10
+    num_inference_steps: 20
     sample_size: 8
-    sample_steps_prob: 0.2
+    sample_steps_prob: 0.18
     sample_trajectory_per_video: 1
     use_kv_cache: true
   eval_cfg:
@@ -103,6 +107,6 @@ val:
 
 # logging settings
 logger:
-  print_freq: 5
+  print_freq: 10
   save_checkpoint_freq: !!float 5000
   use_wandb: true
