--- a/experiments/ucfv2_16fr_10st_GRPO_FAR_L_ucf101_uncond_res256_400K_bs32/GRPO_FAR_L_ucf101_uncond_res256_400K_bs32.yml
+++ b/experiments/ucfv2_16fr_10st_GRPO_FAR_L_ucf101_uncond_res256_400K_bs32/GRPO_FAR_L_ucf101_uncond_res256_400K_bs32.yml
@@ -1,43 +1,44 @@
-name: lora+kl-v10-ssim-56fr-10steps_FAR_M_Long_minecraft_res128_1000K_bs32_GRPO
+# GENERATE TIME: Sat Jun  7 15:45:47 2025
+# CMD:
+# train_grpo.py -opt /users/xiaokangliu/projects/FAR-GRPO/options/train/far/video_generation/GRPO_FAR_L_ucf101_uncond_res256_400K_bs32.yml
+
+name: ucfv2_16fr_10st_GRPO_FAR_L_ucf101_uncond_res256_400K_bs32
 manual_seed: 0
 mixed_precision: bf16
 
 # dataset and data loader settings
 datasets:
   train:
-    type: MinecraftDataset
-    data_list: /users/xiaokangliu/datasets/minecraft/minecraft_train.json
+    type: UCFDataset
+    data_list: /users/xiaokangliu/datasets/ucf101/trainval.json
     split: training
-    use_latent: false
     data_cfg:
-      num_frames: 300
-      frame_interval: 1
-    batch_size_per_gpu: 12
-    num_rollouts_per_prompt: 6 # currently for debug
+      n_frames: 16
+      resolution: 256
+      frame_interval: 3
+      use_flip: true
+    batch_size_per_gpu: 16
+    num_rollouts_per_prompt: 8
 
   sample:
-    type: MinecraftDataset
-    data_list: /users/xiaokangliu/datasets/minecraft/minecraft_val.json
+    type: UCFDataset
+    data_list: /users/xiaokangliu/datasets/ucf101/trainval.json
     split: validation
     data_cfg:
-      num_frames: 300
-      frame_interval: 1
-    num_sample: 256
-    batch_size_per_gpu: 8
+      n_frames: 16
+      resolution: 256
+      frame_interval: 3
+      evaluation_type: Latte
+    num_sample: 64
+    batch_size_per_gpu: 16
 
 models:
   model_cfg:
     transformer:
       from_pretrained: ~ # diffusers pretrained path (from_pretrained)
       init_cfg:
-        type: FAR_M_Long
-        config: {
-          "condition_cfg": {
-            "type": "action",
-            "num_action_classes": 4
-          }
-        }
-        pretrained_path: /users/xiaokangliu/models/FAR_M_Long_Minecraft_Action128-4c041561.pth
+        type: FAR_L
+        pretrained_path: /users/xiaokangliu/models/FAR_L_UCF101_Uncond256-adea51e9.pth
       lora_config:
         r: 32  # LoRA rank
         alpha: 64  # LoRA scaling factor
@@ -47,13 +48,13 @@ models:
         task_type: "FEATURE_EXTRACTION"
     vae:
       type: MyAutoencoderDC
-      from_config: options/model_cfg/dcae/model_16x_c32_config.json
-      from_config_pretrained: /users/xiaokangliu/models/DCAE_Minecraft_Res128-a5677f66.pth
+      from_config: options/model_cfg/dcae/model_32x_c32_config.json
+      from_config_pretrained: /users/xiaokangliu/models/DCAE_UCF101_Res256-9c4355c8.pth
     scheduler:
       from_pretrained: options/model_cfg/far/scheduler_config.json
   clean_context_ratio: 0.1
   weighting_scheme: logit_normal
-  training_type: long_context
+  training_type: base
 
 # path
 path:
@@ -65,8 +66,8 @@ train:
 
   optim_g:
     type: AdamW
-    lr: !!float 1e-4
-    weight_decay: 1e-4
+    lr: !!float 3e-4
+    weight_decay: 0
     betas: [ 0.9, 0.999 ]
 
   param_names_to_optimize: ~
@@ -77,7 +78,7 @@ train:
   total_iter: 1000000
   max_grad_norm: 1.0
   adv_clip_max: 5
-  clip_range: 1e-3
+  clip_range: 5e-3
   # clip_range: 1e-2
   kl_weight: 0.001
   num_batches_per_epoch: 2
@@ -88,16 +89,14 @@ val:
   val_freq: 4000
   eval_on_start: false
   sample_cfg:
-    context_length: 144
-    unroll_length: 56
-    # unroll_length: 12
-    guidance_scale: 1.5
+    context_length: 2
+    unroll_length: 14
+    guidance_scale: 1.0
     # num_inference_steps: 50
     num_inference_steps: 10
     sample_size: 8
-    sample_steps_prob: 0.2
+    sample_steps_prob: 1
     sample_trajectory_per_video: 1
-    use_kv_cache: true
   eval_cfg:
     metrics: ['mse', 'psnr', 'ssim', 'fvd', 'lpips']
 
@@ -106,3 +105,4 @@ logger:
   print_freq: 5
   save_checkpoint_freq: !!float 5000
   use_wandb: true
+
